# webpack-typescript-rust-boilerplate

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  SECURITY.md  ToDo.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: config.yml
configuration/: environment.js  html.json  webpack.dev.config.js  webpack.prod.config.js
src/: index.ejs  index.html
src/js/: app.ts  deep-thought.ts  demo.ts  rust.ts
src/rust/: lib.rs
src/scss/: app.scss  demo.scss  index.scss  osx.scss  sutysisku.scss
src/ts/: coi.ts  consts.ts  front.ts  index.ts  rust.ts  service-worker.js  simple.ts  ssr.ts  worker-controller.ts
src/ts/libs/: fastdom.ts  logger.ts  queue.ts
src/ts/libs/arrows/: getBoxToBoxArrow.ts
src/ts/libs/cmaxes/: cmaxes.ts
src/ts/libs/inference/browser/: index.ts  session.ts  sessionController.ts  sessionParams.ts  tokenizer.ts  tokenizer.worker.ts  tokenizerLoader.ts
src/ts/libs/inference/common/: generator.ts  index.ts
src/ts/libs/inference/text/: base.ts  featureExtractionModel.ts  index.ts  metadata.ts  models.ts  simpleTextModel.ts
src/ts/libs/semsearch/: fns.ts  index.ts  inference.ts  semsearcher.ts
src/ts/types/: index.ts
src/ts/utils/: ceha.ts  fns.ts  pronunciation.ts  zlm.ts
src/ts/worker/: worker.ts
src/ts/worker/data/: mini-lm-v2-quant.tokenizer.brotli  parsed-de-0.json  parsed-en-0.json  parsed-en-1.json  parsed-en-2.json  parsed-en-3.json  parsed-en-4.json  parsed-en-simple-0.json  parsed-en.json  parsed-eo-0.json  parsed-eo.json  parsed-es-0.json  parsed-es-1.json  parsed-es.json  parsed-fr-0.json  parsed-fr-facile-0.json  parsed-fr-facile-1.json  parsed-fr-facile.json  parsed-hu-0.json  parsed-ja-0.json  parsed-ja-1.json  parsed-ja.json  parsed-jbo-0.json  parsed-jbo-1.json  parsed-jbo-2.json  parsed-jbo.json  parsed-pl-0.json  parsed-ru-0.json  parsed-ru-1.json  parsed-ru.json  parsed-sv-0.json  parsed-zh-0.json  tcini.json  versio.json
src/ts/worker/template/: cmaxes.js  index.html  index.js  tejufra.json  worker.js
(+8 files in other folders)
